@@ -23,7 +23,7 @@ var utils = require('./utils');
  */
 module.exports = function (app, validate, realm) {
   if (typeof validate !== 'function') {
-    throw new strata.Error('Missing validation function for basic auth');
+    throw new Error('Missing validation function for basic auth');
   }
 
   function basicAuth(env, callback) {
