@@ -16,15 +16,15 @@ var utils = require('./utils');
  */
 module.exports = function (app, root, index) {
   if (typeof root !== 'string') {
-    throw new strata.Error('Invalid root directory');
+    throw new Error('Invalid root directory');
   }
 
   if (!fs.existsSync(root)) {
-    throw new strata.Error('Directory "' + root + '" does not exist');
+    throw new Error('Directory "' + root + '" does not exist');
   }
 
   if (!fs.statSync(root).isDirectory()) {
-    throw new strata.Error('"' + root + '" is not a directory');
+    throw new Error('"' + root + '" is not a directory');
   }
 
   if (index && typeof index === 'string') {
