@@ -1,5 +1,3 @@
-var strata = require('./index');
-
 module.exports = Header;
 
 /**
@@ -11,7 +9,7 @@ function Header(name, value) {
   }
 
   if (typeof name === 'undefined') {
-    throw new strata.Error('Header name is required');
+    throw new Error('Header name is required');
   }
 
   this.name = name;
