@@ -289,7 +289,7 @@ function makeEnv(opts) {
     if (opts.error instanceof Stream) {
       env.error = opts.error;
     } else {
-      throw new StrataError('Environment error must be a Stream');
+      throw new Error('Environment error must be a Stream');
     }
   } else {
     env.error = process.stderr;
@@ -312,7 +312,7 @@ function makeEnv(opts) {
 exports.call = call;
 function call(app, env, callback) {
   if (typeof app !== 'function') {
-    throw new StrataError('App must be a function');
+    throw new Error('App must be a function');
   }
 
   function handleResponse(status, headers, body) {
@@ -368,20 +368,6 @@ function handleError(err, env, callback) {
 
   return true;
 }
-
-/**
- * This error is the base class for all errors in Strata.
- */
-exports.Error = StrataError;
-function StrataError(message, cause) {
-  if (!(this instanceof StrataError)) {
-    return new StrataError(message, cause);
-  }
-
-  UserError.apply(this, arguments);
-}
-
-util.inherits(StrataError, UserError);
 
 // Setup dynamic loading of modules, accessible by property name.
 
