@@ -1,5 +1,4 @@
 var Stream = require('stream');
-var strata = require('./index');
 var utils = require('./utils');
 
 /**
@@ -32,7 +31,7 @@ module.exports = function (app) {
 
 function assert(condition, message) {
   if (!condition) {
-    throw new strata.Error(message);
+    throw new Error(message);
   }
 }
 
