@@ -1,6 +1,5 @@
 var path = require('path');
 var fs = require('fs');
-var strata = require('../index');
 var File = require('./file');
 var Part = require('./part');
 
@@ -42,11 +41,11 @@ function Parser(boundary, tmpdir, prefix) {
   prefix = prefix || '';
 
   if (!fs.existsSync(tmpdir)) {
-    throw new strata.Error('Temporary directory "' + tmpdir + '" does not exist');
+    throw new Error('Temporary directory "' + tmpdir + '" does not exist');
   }
 
   if (!fs.statSync(tmpdir).isDirectory()) {
-    throw new strata.Error('"' + tmpdir + '" is not a directory');
+    throw new Error('"' + tmpdir + '" is not a directory');
   }
 
   this.boundary = new Buffer(boundary.length + 4);
@@ -349,7 +348,7 @@ Parser.prototype.onPartEnd = function () {
 
 Parser.prototype.end = function () {
   if (this.state !== S.END) {
-    throw new strata.Error('Stream ended unexpectedly (state: ' + this.state + ')');
+    throw new Error('Stream ended unexpectedly (state: ' + this.state + ')');
   }
 
   this._done = true;
