@@ -1,6 +1,5 @@
 var path = require('path');
 var qs = require('querystring');
-var strata = require('./index');
 var multipart = require('./multipart');
 var utils = require('./utils');
 var Accept = require('./header/accept');
@@ -435,7 +434,7 @@ Request.prototype.body = function (callback) {
       try {
         env.strataBody = JSON.parse(buffer.toString());
       } catch (e) {
-        callback(new strata.Error('Invalid JSON', e), {});
+        callback(new Error('Invalid JSON', e), {});
         return;
       }
 
@@ -452,7 +451,7 @@ Request.prototype.body = function (callback) {
       try {
         var parser = new multipart.Parser(boundary, this.uploadDir, this.uploadPrefix);
       } catch (e) {
-        callback(new strata.Error('Cannot create multipart parser', e), body);
+        callback(new Error('Cannot create multipart parser', e), body);
         return;
       }
 
@@ -481,7 +480,7 @@ Request.prototype.body = function (callback) {
 
         if (length !== buffer.length) {
           input.pause();
-          callback(new strata.Error('Error parsing multipart body: ' + length + ' of ' + buffer.length + ' bytes parsed'), body);
+          callback(new Error('Error parsing multipart body: ' + length + ' of ' + buffer.length + ' bytes parsed'), body);
         }
       });
 
@@ -489,7 +488,7 @@ Request.prototype.body = function (callback) {
         try {
           parser.end();
         } catch (e) {
-          callback(new strata.Error('Error parsing multipart body', e), body);
+          callback(new Error('Error parsing multipart body', e), body);
         }
       });
     } else {
