@@ -1,5 +1,4 @@
 var util = require('util');
-var strata = require('./index');
 
 /**
  * Provides URL rewriting behavior similar to Apache's mod_rewrite. All requests
@@ -12,7 +11,7 @@ module.exports = function (app, pattern, replacement) {
   }
 
   if (!util.isRegExp(pattern)) {
-    throw new strata.Error('Pattern must be a RegExp');
+    throw new Error('Pattern must be a RegExp');
   }
 
   replacement = replacement || '';
