@@ -1,5 +1,4 @@
 var util = require('util');
-var strata = require('./index');
 var utils = require('./utils');
 
 /**
@@ -65,7 +64,7 @@ module.exports = function (app) {
     }
 
     if (!util.isRegExp(pattern)) {
-      throw new strata.Error('Pattern must be a RegExp');
+      throw new Error('Pattern must be a RegExp');
     }
 
     var method;
