@@ -1,4 +1,3 @@
-var strata = require('./index');
 var utils = require('./utils');
 
 /**
@@ -101,7 +100,7 @@ module.exports = function (app) {
     }
 
     if (location.charAt(0) != '/') {
-      throw new strata.Error('Location must start with "/" (was: ' + location + ')');
+      throw new Error('Location must start with "/" (was: ' + location + ')');
     }
 
     location = location.replace(/\/$/, '');
