@@ -13,7 +13,6 @@
     "url": "git://github.com/mjijackson/strata.git"
   },
   "dependencies": {
-    "usererror": "1.0.2",
     "bufferedstream": "1.4.1",
     "mime": "1.2.3",
     "strftime": "0.4.6",
